<resources>
    <string name="app_name">Fitness Friends</string>

    <string name="facebook_app_id">1686001545049539</string>
    <string name="title_activity_login">Sign in</string>
    <string name="fb_login_protocol_scheme">fb1686001545049539</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--LOGIN ACTIVITY STRINGS-->
    <string name="register_password"> Password </string>
    <string name="register_user_name">Enter Username (atleast 4 characters)</string>
    <string name="action_register">Register</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_tab1">TabActivity1</string>

    <!--EDIT PROFILE STRINGS-->
    <string name="edit_profile_label">Edit Profile</string>
    <!--MENU BAR STRINGS-->
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="searchButton">Search</string>

    <!--PROFILE PAGE STRINGS-->
    <string name="really_long_string">About: My goal is to lose 100 lbs by the end of the year </string>
    <!--AlertBoxStrings-->
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <!--generic_textbox Strings-->
    <string name="Example">Example showing EditText</string>
    <string name="print">print stuff</string>
    <string name="Enter_Stuff">enter stuff</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
