<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <!--<item-->
        <!--android:id="@+id/action_favorite"-->
        <!--android:title="@string/app_name"-->
        <!--app:showAsAction="ifRoom"/>-->

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <!--<item-->
        <!--android:id="@+id/miCompose"-->
        <!--app:showAsAction="ifRoom"-->
        <!--android:title="Compose">-->
    <!--</item>-->
    <item
        android:id="@+id/editProfileButton"
        app:showAsAction="never"
        android:title="@string/edit_profile"/>
    <item
        android:id="@+id/searchButton"
        app:showAsAction= "ifRoom|never"
        android:title="@string/searchButton"
        android:icon="@drawable/magnifying_glass_icon" />
    <item
        android:id="@+id/logoutButton"
        app:showAsAction="never"
        android:title="@string/logout">
    </item>



</menu>